# dot-edu

./: .gitignore  README.md
MTech-BITS/Conversation-AI/Ass-2/: .tmux_manager.sh  app.py  conv-ai-grp-09.service  main.ipynb  pyproject.toml
MTech-BITS/Conversation-AI/Ass-2/financial-docs-md/chunks-500/: 10-Q4-2024-As-Filed_chunk_0.md  10-Q4-2024-As-Filed_chunk_1.md  10-Q4-2024-As-Filed_chunk_10.md  10-Q4-2024-As-Filed_chunk_100.md  10-Q4-2024-As-Filed_chunk_1001.md  10-Q4-2024-As-Filed_chunk_1002.md  10-Q4-2024-As-Filed_chunk_1005.md  10-Q4-2024-As-Filed_chunk_1006.md  10-Q4-2024-As-Filed_chunk_101.md  10-Q4-2024-As-Filed_chunk_1011.md  10-Q4-2024-As-Filed_chunk_1012.md  10-Q4-2024-As-Filed_chunk_1013.md  10-Q4-2024-As-Filed_chunk_1015.md  10-Q4-2024-As-Filed_chunk_1016.md  10-Q4-2024-As-Filed_chunk_1017.md  10-Q4-2024-As-Filed_chunk_1019.md  10-Q4-2024-As-Filed_chunk_1020.md  10-Q4-2024-As-Filed_chunk_1022.md  10-Q4-2024-As-Filed_chunk_1025.md  10-Q4-2024-As-Filed_chunk_1026.md  10-Q4-2024-As-Filed_chunk_1027.md  10-Q4-2024-As-Filed_chunk_1029.md  10-Q4-2024-As-Filed_chunk_103.md  10-Q4-2024-As-Filed_chunk_1031.md  10-Q4-2024-As-Filed_chunk_1032.md  10-Q4-2024-As-Filed_chunk_1033.md  10-Q4-2024-As-Filed_chunk_1035.md  10-Q4-2024-As-Filed_chunk_1037.md  10-Q4-2024-As-Filed_chunk_1038.md  10-Q4-2024-As-Filed_chunk_1039.md  10-Q4-2024-As-Filed_chunk_104.md  10-Q4-2024-As-Filed_chunk_1040.md  10-Q4-2024-As-Filed_chunk_1041.md  10-Q4-2024-As-Filed_chunk_1042.md  10-Q4-2024-As-Filed_chunk_1043.md  10-Q4-2024-As-Filed_chunk_1044.md  10-Q4-2024-As-Filed_chunk_1045.md  (+1492 more)
(+37 files in other folders)
