[project]
name = "conv-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">3.10,<4.0"
dependencies = [
    "streamlit (>=1.43.0,<2.0.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
